<resources>
    <string name="app_name">SmartPetsz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_smartpetsz_home">Home</string>
    <string name="menu_smartpetsz_agenda">Agenda</string>
    <string name="menu_smartpetsz_monitor">Monitor</string>
    <string name="menu_smartpetsz_vacina">Vacina</string>
    <string name="menu_smartpetsz_configura">Configura</string>


</resources>